--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -5,11 +5,11 @@
   align-items: center;
   justify-content: center;
   height: 220px;
-  margin: 0 100px;
-  background: url("../assets/background-paysage-accueil.png") no-repeat center;
+  width: 100%;
   background-size: cover;
   border-radius: 25px;
 }
+
 .banner::before {
   content: "";
   position: absolute;
@@ -17,46 +17,44 @@
   height: 100%;
   width: 100%;
   background: black;
-  opacity: 0.3;
+  opacity: 0.9;
   border-radius: 25px;
 }
+
 .banner h1 {
+  position: absolute;
   text-align: center;
   font-size: 48px;
   font-weight: 500;
   color: white;
   z-index: 1;
+  margin: 0 20px 20px 20px;
 }
-@media (max-width: 1200px) {
-  .banner h1 {
-    font-size: 30px;
-  }
-  .banner {
-    margin: 0 30px;
-  }
+
+.banner img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  opacity: 60%;
+  
 }
-@media (max-width: 767px) {
+
+@media (max-width: 375px) {
   .banner {
-    margin: 0 3%;
-    height: initial;
-    padding: 7% 0;
-    border-radius: 10px;
-  }
-  .banner::before {
-    border-radius: 10px;
-  }
+    height: 111px;
+    text-align: left;
+    align-items: center;
+    justify-content: flex-start;
+  } 
+
   .banner h1 {
     font-size: 24px;
-  }
-}
-@media (max-width: 479px) {
-  .banner {
-    justify-content: flex-start;
-  }
-  .banner h1 {
-    width: 65%;
-    margin: 0;
+    line-height: 24px;
     text-align: left;
-    padding-left: 5%;
-  }
+    padding-left: 15px;
+    padding-right: 50px;
+
+  } 
+
 }
