--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,6 +7,15 @@
   pointer-events: none;
 }
 
+.home-frame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
