--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -2,15 +2,103 @@
   display: flex;
   flex-wrap: wrap;
   text-align: left;
-  justify-content: space-around;
-  background-color: #F6F6F6;
+  justify-content: center;
+  gap: 40px;
+  background-color: #F7F7F7;
   border-radius: 25px;
-  width: 100%;
-  margin: 43px auto;
+  margin: 43px 100px;
+  max-width: 100%;
+  overflow: auto;
 }
 
-@media (max-width: 375px){
-.card-list {
-flex-direction: column;
+.card-list a {
+    margin-top: 28px;
+    height: 320px;
+    width: calc((100% / 3) - 53px);
 }
+
+@media (max-width: 1200px) {
+
+  .card-list {
+    margin: 10px 30px;
+    padding: 10px;
+    align-items: center;
+    gap:20px;
+    border-radius: 10px;
+  }
+
+.card-list a {
+  width: calc((100% / 2) - 90px);
+  height: 255px;
+  gap: 10px;  
+}
+
+}
+
+
+
+@media (max-width: 889px) {
+    .card-list {
+        background-color: #FFFFFF;
+        flex-direction: column;
+        align-items:center;
+        margin: 0 auto;
+        padding: 10px;
+    }
+
+    .card-list a {
+      max-width: 100%;
+      height: 255px;
+      margin: 10px;
+    }
+    
+}
+
+@media (max-width: 767px) {
+    .card-list {
+        background-color: #FFFFFF;
+        flex-direction: column;
+        align-items:center;
+        margin: 0 auto;
+        padding: 0 auto;
+    }
+
+    .card-list a {
+      max-width: 100%;
+      margin: auto 10px;
+    }
+
+    
+}
+
+@media (max-width: 660px) {
+
+    .card-list {
+      margin: 20px;
+    }
+
+   .card-list a {
+    width: 100%;
+   }
+}
+
+
+@media (max-width: 375px){
+
+  .card-list {
+      margin: 0px;
+      gap: 20px;
+      max-width: 100%;
+      align-items: center;
+      text-align: left;
+      justify-content: flex-start;
+    }
+    
+    .card-list a {
+    border-radius: 10px;
+    text-align: center;
+    height: 255px;
+    width: 100%;
+    
+    }
 }
