--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 3% 100px;
+  margin: 6vh 100px;
 }
 
 header nav {
@@ -14,8 +14,9 @@ nav a {
   font-size: 24px;
   font-weight: 500;
   line-height: 34.22px;
-  color: #ff6060;
+  color: #FF6060;
   text-decoration: none;
+  text-align: right;
 }
 
 nav a:hover,
@@ -29,19 +30,38 @@ header a:active {
 }
 @media (max-width: 767px) {
   header nav {
-    gap: 30px !important;
+    gap: 20px !important;
   }
   header a {
     font-size: 20px;
   }
 }
+
+@media (max-width: 479px) {
+    
+    header>a {
+        width: 40%;
+    }
+    header>a img {
+        width: 100%;
+    }
+    header nav {
+        gap: 20px !important;
+    }
+    header nav a {
+        font-size: 15px;
+        text-transform: uppercase;
+    }
+}
+
 @media (max-width: 375px)  {
   header {
-    margin: 20px;
+    padding-top: 20px;
+    width: 100%;
   }
 
   header img {
-    padding-left: 20px;
+    padding-left: -5px;
   }
   header > a {
     width: 35%;
@@ -50,8 +70,8 @@ header a:active {
     width: 100%;
   }
   header nav {
-    gap: 17px !important;
-    margin-right: 15px;
+    gap: 10px !important;
+    margin-right: 45px;
   }
   header nav a {
     font-size: 50%;
