--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -21,16 +21,16 @@
 
   .card-list {
     margin: 10px 30px;
-    padding: 10px;
+    padding: 20px;
     align-items: center;
-    gap:20px;
+    gap: 50px;
     border-radius: 10px;
   }
 
 .card-list a {
   width: calc((100% / 2) - 90px);
   height: 255px;
-  gap: 10px;  
+  gap: 10vh;  
 }
 
 }
@@ -47,7 +47,6 @@
     }
 
     .card-list a {
-      max-width: 100%;
       height: 255px;
       margin: 10px;
     }
@@ -59,13 +58,14 @@
         background-color: #FFFFFF;
         flex-direction: column;
         align-items:center;
-        margin: 0 auto;
+        margin: 20px auto;
         padding: 0 auto;
     }
 
     .card-list a {
-      max-width: 100%;
-      margin: auto 10px;
+
+      margin: auto 20px;
+      padding: auto 10px;
     }
 
     
@@ -74,12 +74,15 @@
 @media (max-width: 660px) {
 
     .card-list {
-      margin: 20px;
+      width: 100%;
+      margin-left: -10vw;
     }
 
-   .card-list a {
-    width: 100%;
-   }
+    .card-list a {
+    margin: 0 auto;
+    width: calc(100% - 230px);
+    }
+    
 }
 
 
@@ -88,7 +91,6 @@
   .card-list {
       margin: 0px;
       gap: 20px;
-      max-width: 100%;
       align-items: center;
       text-align: left;
       justify-content: flex-start;
