--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,43 +1,36 @@
 .footer {
-  position: relative;
-  max-width: 100%;
-  height: 220px;
+  display: flex;
   background: #000000;
-  margin-top: 25px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 209px;
+  width: 100%;
 }
 
 .footer img {
-  margin-top: 66px;
   height: 39.44px;
   width: 122px;
-  margin-left: 48%;
-  object-fit: contain;
+  margin-bottom: -2vh;
 }
 
 .footer p {
   font-family: "Montserrat", sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
   font-size: 24px;
-  line-height: 142.6%;
-  text-align: center;
+  line-height: 34.22%;
   color: #ffffff;
+  margin: 3% 0 0 !important;
 }
 
-@media (max-width: 375px) {
-  .footer {
-    width: 375px;
-    height: 209px;
+@media (max-width: 980px) {
+
+ .footer img {
+  margin-bottom: 1vh;
+}
+
+ .footer p {
+        font-size: 16px;
   }
 
-  .footer img {
-    height: 39.44px;
-    width: 150px;
-    margin-top: 66px;
-    margin-left: 100px;
-  }
-
-  .footer p {
-    font-size: 12px;
-  }
 }
