page appart version-pc fini, 17h33 6th dec

--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -5,9 +5,10 @@
   align-items: center;
   justify-content: center;
   height: 223px;
-  margin: 0 100px;
+  margin: 0 auto;
   background-size: cover;
   border-radius: 25px;
+  max-width: 1500px;
 }
 
 .banner::before {
