--- a/src/components/Stars/Stars.css
+++ b/src/components/Stars/Stars.css
@@ -1,9 +1,13 @@
-.active-star {
+.star-fill {
   fill: #FF6060;
+}
+
+.star-empty {
+  fill: #F6F6F6;
 }
 
 svg {
   width: 30px;
   height: 30px;
-  fill: #C4C4C4;
 }
+
