--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body {
+#root {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background: #FFFFFF;
-  width: 100%;
+  max-width: 1500px;
+  margin: 0 auto;
 }
