--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,7 @@
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: 'Montserrat', sans-serif;
   background: #FFFFFF;
   width: 100%;
+  margin: 0 auto;
 }
