--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -8,6 +8,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    height: 23vh;
 }
 
 .dropdown__list p{
@@ -33,6 +34,8 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    height: 20vh;
+    align-items: center;
 }
 
 .dropdown__p-array{
@@ -70,5 +73,8 @@
     width: 1.8vw;
 }
 
-
-
+@media (max-width: 600px) {
+    .button-content img{
+        width: 4vw;
+}
+}
