--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 6vh auto;
+  margin: 40px auto;
+  max-width: 1240px;
 }
 
 header nav {
