--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -18,8 +18,9 @@
 
 .slider__image {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
 }
 
 .slider img:first-of-type {
@@ -45,9 +46,10 @@
 
 
 @media (max-width: 980px) {
+
     .slider button img {
-        width: 40px !important;
-        height: 50px;
+        width: 30px !important;
+        height: 40px;
     }
 }
 
@@ -58,10 +60,23 @@
 }
 
 @media (max-width: 479px) {
+
+    .slider {
+        margin-top: 20px;
+    }
+
+    .slider img:not(button img) {
+    width: 335px;
+    height: 255px;
+    object-fit: cover;
+    border-radius: 10px;
+    }
+
     .slider button img {
         width: 15px !important;
-        height: 20px;
+        height: 15px;
     }
+
 }
 
 
