--- a/src/pages/Nomatch/Nomatch.css
+++ b/src/pages/Nomatch/Nomatch.css
@@ -1,63 +1,79 @@
 .nomatch {
- height: 100vh;
-
+  height: 100vh;
+  margin: 40px auto;
+  max-width: 1240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 150px;
 }
 
-
 .nomatch h1 {
-  /* 404 */
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
+  width: 100%;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 288px;
   line-height: 142.6%;
-  display: flex;
   align-items: center;
   text-align: center;
   color: #ff6060;
-  margin-left: 30%;
+  margin: 0 auto;
 }
 
 .nomatch p {
   /* Ooops! phrase */
-
+  width: 100%;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
   line-height: 142.6%;
-  display: flex;
   align-items: center;
   text-align: center;
   color: #ff6060;
-  margin-left: 20%;
-  margin-top: 50px;
+  margin: 0 auto;
 }
 
 .backhome {
   /* backhome phrase */
+  width: 100%; 
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 142.6%;
-  display: flex;
   align-items: center;
   text-decoration-line: underline;
   text-align: center;
-  margin-left: 40%;
-  margin-top: 5%;
+  margin-top: 200px;
   color: #ff6060;
 }
 
+@media (max-width: 700px) {
+  .nomatch h1 {
+    margin-top: 100px;
+    font-size: 180px;
+  }
+
+  .nomatch p {
+    font-size: 30px;
+  }
+
+  .backhome {
+    font-size: 14px;
+    margin-top: 133px;
+  }
+}
+
 @media (max-width: 375px) {
+
+  .nomatch {
+    max-width: 100%;
+}
+
   .nomatch h1 {
     font-size: 96px;
-    margin-left: 27%;
     text-align: center;
   }
 
@@ -69,6 +85,5 @@
 
   .backhome {
     font-size: 14px;
-    margin-left: 85px;
   }
 }
