--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   justify-content: space-between;
   margin: 40px auto;
-  max-width: 1240px;
+  max-width: 1140px;
 }
 
 header nav {
@@ -33,16 +33,18 @@ header a:active {
   header nav {
     gap: 20px !important;
   }
-  header a {
-    font-size: 20px;
+
+  header nav a {
+    font-size: 15px;
+    text-transform: uppercase;
   }
+  
 }
 
 @media (max-width: 479px) {
     
     header {
-      margin: -1vh 4vw;
-    
+      margin: -1vh 4vw;  
     }
 
     header>a {
@@ -68,7 +70,7 @@ header a:active {
   }
 
   header img {
-    padding-left: -5px;
+    padding-right: 20px;
   }
   header > a {
     width: 35%;
@@ -78,7 +80,7 @@ header a:active {
   }
   header nav {
     gap: 10px !important;
-    margin-right: 45px;
+    margin-right: 35px;
   }
   header nav a {
     font-size: 50%;
