--- a/src/pages/Location/Location.css
+++ b/src/pages/Location/Location.css
@@ -48,7 +48,6 @@
 
 .taglist li {
     display: flex;
-    align-items: left;
     height: 85%;
     padding: 5px 30px;
     margin-right: 10px;
@@ -100,7 +99,7 @@
     }
 
     .taglist {
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         gap: 10px;
 }
 
@@ -115,6 +114,7 @@
 @media (max-width: 980px) {
     .section-title_subt {
         font-size: 30px;
+        margin-top: 0px;
     }
 }
 
